--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,13 +6,20 @@
         android:id="@+id/action_insert"
         android:title="@string/insert"
         android:icon="@drawable/ic_action_insert"
-        app:showAsAction="ifRoom"
-        />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_save"
-        android:orderInCategory="100"
         android:title="@string/save"
         android:icon="@drawable/ic_action_save"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_locate"
+        android:title="@string/locate"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_action_delete"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
