--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,6 +22,10 @@
         android:icon="@drawable/ic_action_delete"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_map"
+        android:title="@string/show_map"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
